fix(placeholder): text-overflow to ellipsis
affects: @varlet/ui

--- a/packages/varlet-ui/src/input/input.less
+++ b/packages/varlet-ui/src/input/input.less
@@ -68,6 +68,7 @@
     position: absolute;
     top: 50%;
     left: 0;
+    width: 100%;
     transform-origin: left;
     transition-property: top, transform;
     transition-duration: 0.3s;
@@ -80,6 +81,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
     transform-origin: left;
     transition: transform 0.3s;
     transform: translate(0, calc(var(--input-textarea-padding-top) + var(--input-placeholder-size))) scale(1);
@@ -135,6 +137,7 @@
 
   &--placeholder-hint {
     top: 0;
+    width: 133.33%;
     transform: translate(0, 0) scale(0.75);
   }
 
