--- a/packages/varlet-ui/src/styles/common.less
+++ b/packages/varlet-ui/src/styles/common.less
@@ -29,6 +29,11 @@
     display: block;
   }
 
+  &--ellipsis {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+  }
+
   &--inline-block {
     display: inline-block;
   }
